| Bug #27003 | Failure during noderestart could crash/hang alive node (and hence cluster) | ||
|---|---|---|---|
| Submitted: | 9 Mar 2007 16:03 | Modified: | 28 Mar 2007 5:11 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Jonas Oreland | Target Version: | |
[12 Mar 2007 15:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21740 ChangeSet@1.2115, 2007-03-12 15:28:07+01:00, jonas@perch.ndb.mysql.com +5 -0 ndb - bug#27003 Handle random(not in order) LQHKEYREQ failures during node-restart
[13 Mar 2007 11:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21793 ChangeSet@1.2295, 2007-03-13 11:29:14+01:00, jonas@perch.ndb.mysql.com +7 -0 ndb - bug#27003 Handle random(not in order) LQHKEYREQ failures during node-restart
[13 Mar 2007 11:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21794 ChangeSet@1.2116, 2007-03-13 11:30:36+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#27003 add testprg to autotest
[13 Mar 2007 12:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21802 ChangeSet@1.2431, 2007-03-13 12:38:47+01:00, jonas@perch.ndb.mysql.com +3 -0 ndb - bug#27003 merge to 5.1, adopt testprg to optimized node recovery
[20 Mar 2007 16:56]
Jonas Oreland
pushed to wl2325-5.0, 50-ndb, 51-ndb, telco-6.1, 51-telco wont fix in 4.1
[21 Mar 2007 0:54]
Trudy Pelzer
Upgrading and tagging per Tomas.
[22 Mar 2007 21:20]
Mads Martin Joergensen
Fixed in 5.1.17
[23 Mar 2007 8:36]
Jon Stephens
Documented bugfix in 5.1.17 and 5.1.15-ndb-6.1.6 changelogs. Need 5.0 version for changelog. Thanks.
[26 Mar 2007 14:53]
Tomas Ulin
5.0.40
[28 Mar 2007 5:11]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix for 5.0 in 5.0.40 changelog. Closed.

Description: ===== DbtupExecQuery.cpp 1.22 vs edited ===== --- 1.22/storage/ndb/src/kernel/blocks/dbtup/DbtupExecQuery.cpp 2007-03-09 16:01:44 +01:00 +++ DbtupExecQuery.cpp 2007-03-09 15:59:47 +01:00 @@ -213,6 +213,13 @@ //--------------------------------------------------- PagePtr pagePtr; Uint32 pageOffset; + + if ((rand() % 100) > 25) + { + signal->theData[0] = 827; + return; + } + if (!allocTh(regFragPtr.p, regTabPtr.p, NORMAL_PAGE, How to repeat: .. Suggested fix: .