ndb - bug#27003   Handle random(not in order) LQHKEYREQ failures during node-restart

ndb/src/kernel/blocks/ERROR_codes.txt:
  Document new error codes
ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  Handle random(not in order) LQHKEYREQ failures during node-restart
ndb/src/kernel/blocks/dbtup/DbtupExecQuery.cpp:
  Error codes for various oom problems
ndb/src/kernel/blocks/dbtup/DbtupGen.cpp:
  move CLEAR_ERROR_INSERT_VALUE to constructor so that it's reasonable to use it for
  restart testing
ndb/src/kernel/blocks/ndbcntr/NdbcntrMain.cpp:
  Add error insert for CopyFragRef
ndb/test/ndbapi/testNodeRestart.cpp:
  Testprg for bug#27003
ndb/test/run-test/daily-basic-tests.txt:
  add testprg